2011-03-14  vadim  <vadim@netcitadel.com>

	* pix.g (named_object_network): see #2223 Implemented import of
	named objects for Cisco PIX and ASA ("object network name" and
	"object service name")

2011-03-12  vadim  <vadim@netcitadel.com>

	* Compiler.cpp (expandGroupsInRuleElement): sorting objects in the
	rule element by name after group is expanded, this helps ensure
	stable ordering of objects in generated configuration.

	* Compiler.cpp (replaceClusterInterfaceInItfRE::processNext):
	sorting objects in rule element after cluster interfaces have been
	replaced, this helps ensure stable ordering of objects in generated
	configuration.

	* FWObject.h (FWObjectNameCmpPredicate): moved this class from
	gui-specific module to libfwbuilder as it is universally useful.
	It can compare FWObject objects by name and can optionally can
	follow references; it can be used with std::sort() to sort lists
	of FWObject pointers or directly sort rule elements.

	* Compiler.cpp (_init): see #2212 "Performance improvement in
	compilers". This change brings significant improvement in compile
	time on large object trees. The speed-up is especially noticeable
	in single rule compile where the time before generated firewall
	configuration appears in the GUI shrank by up to a factor of 10.

2011-03-11  vadim  <vadim@netcitadel.com>

	* FWObject.cpp (add): fixes #2209 "do not allow the same object to
	be child of different objects in the tree". Method FWObject::add()
	enforces this. Subsequent clean-up and fixes in many places to
	follow this logic. This makes code much cleaner, better organized
	and more reliable.

2011-03-10  vadim  <vadim@netcitadel.com>

	* libfwbuilder/src/fwcompiler/Compiler.cpp (Compiler): see #2207
	fixed memory leak in policy compilers. The impact of this leak was
	especially severe on Windows with very large object databases.

2011-03-08  vadim  <vadim@netcitadel.com>

	* CustomServiceDialog.cpp (loadFWObject): fixes #2201 "Some fields