@@ -30,6 +30,7 @@
 #include "fwbuilder/FWObject.h"
 #include "fwbuilder/FWObjectDatabase.h"
 #include "fwbuilder/ICMPService.h"
+#include "fwbuilder/ICMP6Service.h"
 #include "fwbuilder/IPService.h"
 #include "fwbuilder/IPv4.h"
 #include "fwbuilder/IPv6.h"
@@ -40,6 +41,13 @@
 #include "fwbuilder/TCPService.h"
 #include "fwbuilder/TagService.h"
 #include "fwbuilder/UDPService.h"
+#include "fwbuilder/physAddress.h"
+
+#include "fwbuilder/Rule.h"
+#include "fwbuilder/RuleSet.h"
+#include "fwbuilder/FWReference.h"
+#include "fwbuilder/Host.h"
+#include "fwbuilder/FWOptions.h"
 
 #include "QStringListOperators.h"
 
@@ -47,6 +55,9 @@
 #include "../libgui/FWBTree.h"
 
 #include <QStringList>
+
+#include <set>
+
 
 extern int fwbdebug;
 
@@ -76,7 +87,7 @@ QString ObjectSignature::toString() const
     if (type_name == CustomService::TYPENAME)
         sig << platform << code << protocol_name;
 
-    if (type_name == ICMPService::TYPENAME)
+    if (type_name == ICMPService::TYPENAME || type_name == ICMP6Service::TYPENAME)
         sig << icmp_type << icmp_code;
 
     if (type_name == IPService::TYPENAME)
@@ -97,6 +108,150 @@ QString ObjectSignature::toString() const
 
     return sig.join("|-|");
 }
+
+void* ObjectSignature::dispatch(Network *obj, void*)
+{
+    type_name = obj->getTypeName().c_str();
+    address = obj->getAddressPtr()->toString().c_str();
+    netmask = obj->getNetmaskPtr()->toString().c_str();
+    return this;
+}
+
+void* ObjectSignature::dispatch(NetworkIPv6 *obj, void*)
+{
+    type_name = obj->getTypeName().c_str();
+    address = obj->getAddressPtr()->toString().c_str();
+    netmask = obj->getNetmaskPtr()->toString().c_str();
+    return this;
+}
+
+void* ObjectSignature::dispatch(IPv4 *obj, void*)
+{
+    type_name = obj->getTypeName().c_str();
+    address = obj->getAddressPtr()->toString().c_str();
+    netmask = InetAddr::getAllOnes().toString().c_str();
+    return this;
+}
+
+void* ObjectSignature::dispatch(IPv6 *obj, void*)
+{
+    type_name = obj->getTypeName().c_str();
+    address = obj->getAddressPtr()->toString().c_str();
+    netmask = InetAddr::getAllOnes(AF_INET6).toString().c_str();
+    return this;
+}
+
+void* ObjectSignature::dispatch(AddressRange *obj, void*)
+{
+    type_name = obj->getTypeName().c_str();
+    address_range_start = obj->getRangeStart().toString().c_str();
+    address_range_end = obj->getRangeEnd().toString().c_str();
+    return this;
+}
+
+/*
+ * Note that we do not track "compile time" / "run time" attribute of
+ * the object because on import, only "run time" make sense
+ */
+void* ObjectSignature::dispatch(AddressTable *obj, void*)
+{
+    type_name = obj->getTypeName().c_str();
+    address_table_name = obj->getSourceName().c_str();
+    return this;
+}
+
+void* ObjectSignature::dispatch(physAddress *obj, void*)
+{
+    type_name = obj->getTypeName().c_str();
+    address = obj->getPhysAddress().c_str();
+    return this;
+}
+
+void* ObjectSignature::dispatch(IPService *obj, void*)
+{
+    type_name = obj->getTypeName().c_str();
+    protocol = obj->getProtocolNumber();
+    fragments = obj->getBool("fragm") || obj->getBool("short_fragm");
+    return this;
+}
+
+void* ObjectSignature::dispatch(ICMPService *obj, void*)
+{
+    type_name = obj->getTypeName().c_str();
+    icmp_type = obj->getInt("type");
+    icmp_code = obj->getInt("code");
+    return this;
+}
+
+void* ObjectSignature::dispatch(ICMP6Service *obj, void*)
+{
+    type_name = obj->getTypeName().c_str();
+    icmp_type = obj->getInt("type");
+    icmp_code = obj->getInt("code");
+    return this;
+}
+
+void* ObjectSignature::dispatch(TCPService *obj, void*)
+{
+    type_name = obj->getTypeName().c_str();
+    src_port_range_start = obj->getSrcRangeStart();
+    src_port_range_end = obj->getSrcRangeEnd();
+    dst_port_range_start = obj->getDstRangeStart();
+    dst_port_range_end = obj->getDstRangeEnd();
+    established = obj->getEstablished();
+
+    set<TCPService::TCPFlag> flags = obj->getAllTCPFlags();
+    set<TCPService::TCPFlag>::iterator it;
+    for (it=flags.begin(); it!=flags.end(); ++it) flags_comp << *it;
+
+    flags = obj->getAllTCPFlagMasks();
+    for (it=flags.begin(); it!=flags.end(); ++it) flags_mask << *it;
+    return this;
+}
+
+void* ObjectSignature::dispatch(UDPService *obj, void*)
+{
+    type_name = obj->getTypeName().c_str();
+    src_port_range_start = obj->getSrcRangeStart();
+    src_port_range_end = obj->getSrcRangeEnd();
+    dst_port_range_start = obj->getDstRangeStart();
+    dst_port_range_end = obj->getDstRangeEnd();
+    return this;
+}
+
+void* ObjectSignature::dispatch(CustomService *obj, void*)
+{
+    type_name = obj->getTypeName().c_str();
+    platform = "";
+    code = "";
+    list<string> platforms = obj->getAllKnownPlatforms();
+    foreach(std::string pl, platforms)
+    {
+        platform += pl.c_str();
+        code += obj->getCodeForPlatform(pl).c_str();
+    }
+    protocol_name = obj->getProtocol().c_str();
+    return this;
+}
+
+void* ObjectSignature::dispatch(TagService *obj, void*)
+{
+    type_name = obj->getTypeName().c_str();
+    tag = obj->getStr("tagcode").c_str();
+    return this;
+}
+
+/*
+ * Note that we do not track "compile time" / "run time" attribute of
+ * the object because on import, only "run time" make sense
+ */
+void* ObjectSignature::dispatch(DNSName *obj, void*)
+{
+    type_name = obj->getTypeName().c_str();
+    dns_name = obj->getSourceName().c_str();
+    return this;
+}
+
 
 //****************************************************************
 
@@ -142,4 +297,31 @@ FWObject* ObjectMaker::createObject(FWObject *parent,
     }
     o->setName(objName);
     return o;
+}
+
+//****************************************************************
+
+/*
+ * scan the tree starting at @root and use registerObject to build
+ * signatures for all address and service objects in order to be able
+ * to use them on import
+ */
+void ObjectMaker::prepareForDeduplication(FWObject *root)
+{
+    if (RuleSet::cast(root) || Rule::cast(root) ||
+        FWReference::cast(root) ||
+        Host::cast(root) ||
+        FWOptions::cast(root)) return;
+
+    if (Address::cast(root) || Service::cast(root))
+    {
+        ObjectSignature sig;
+        root->dispatch(&sig, (void*)(NULL));
+        registerObject(sig, root);
+    }
+
+    for (FWObject::iterator it=root->begin(); it!=root->end(); ++it)
+    {
+        prepareForDeduplication(*it);
+    }
 }
