@@ -79,7 +79,8 @@ class CustomService : public Service
     void setCodeForPlatform(const std::string& platform,
                             const std::string& code);
     const std::string getCodeForPlatform(const std::string& platform) const;
-
+    std::list<std::string> getAllKnownPlatforms();
+    
     void setProtocol(const std::string& proto);
     const std::string& getProtocol();
 
